Add most historical events (from WaterLooDown's list). Style information hint

--- a/index.html
+++ b/index.html
@@ -55,9 +55,7 @@
 		<div class="container" >
 			<div class="row" >
 				<div class="col-sm-12" >
-					<span>Select an event for more information</span>
-					|
-					<span>TODO: icon explanations</span>
+					<span class="info-select-event" >Select an event in the timeline for more information.</span>
 				</div>
 			</div>
 			<div class="row" >
