--- a/index.html
+++ b/index.html
@@ -38,18 +38,7 @@
 		</div>
 		<div style="clear: both;"></div>
 
-		<div class="container" >
-			<div class="row" >
-				<div class="col-sm-12">
-					<h1><img src="https://s3-eu-west-1.amazonaws.com/guldencoin.com/images/gblue64x64.png" /> Guldencoin Timeline</h1>
-				</div>
-			</div>
-			<div class="row" >
-				<div class="col-sm-12" >
-				</div>
-			</div>
-		</div>
-		<div class="container-fluid">
+		<div class="container-fluid" style="pading-top: 40px;" >
 			<div id="visTimeline" ></div>
 		</div>
 		<div class="container" >
