Add postsers. Fix header padding. Fix angular script double $apply.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		</div>
 		<div style="clear: both;"></div>
 
-		<div class="container-fluid" style="pading-top: 40px;" >
+		<div class="container-fluid" >
 			<div id="visTimeline" ></div>
 		</div>
 		<div class="container" >
