s/Seeds/Timeline/g in nlg-top

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<body ng-controller="MainCtrl" >
 
 		<div class="nlg-top">
-			<div class="nlg-top-logo">Seeds</div>
+			<div class="nlg-top-logo">Timeline</div>
 			<div class="nlg-top-menu">
 				<a href="https://docs.guldencoin.com">Docs</a>
 				<a href="https://seeds.guldencoin.com">Seeds</a>
