Improve date formatting

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				</div>
 				<div class="col-sm-5" >
 					<h2 ng-bind-html="event.title" ></h2>
-					<h5>{{event.start | date}}</h5>
+					<h5>{{event.start | date:'EEEE, d MMMM, y'}}</h5>
 					<span ng-bind-html="event.text" ></span>
 				</div>
 			</div>
