--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
 					<span ng-bind-html="event.text" ></span>
 				</div>
 			</div>
+
+			<div class="footer" >
+				<a href="https://github.com/nlgcoin/timeline.guldencoin.com/issues/new" target="_blank" >Add an event</a>
+			</div>
 		</div>
 
 		<script type="text/javascript" src="/js/jquery-2.1.1.min.js" ></script>
