Change footer (not really footer now, but renders properly)

--- a/index.html
+++ b/index.html
@@ -65,8 +65,10 @@
 				</div>
 			</div>
 
-			<div class="footer" >
-				<a href="https://github.com/nlgcoin/timeline.guldencoin.com/issues/new" target="_blank" >Add an event</a>
+			<div class="row" >
+				<div class="col-sm-12" >
+					<a href="https://github.com/nlgcoin/timeline.guldencoin.com/issues/new" target="_blank" >Add an event</a>
+				</div>
 			</div>
 		</div>
 
